# CSNet

./: .gitignore  README.md  cuda_test.py  eval.py  export.py  model_save.py  pyproject.toml  train.py  train_caps.py  train_deformable_caps.py  train_kd.py  train_kd_3stage.py  train_kd_xonly.py
configs/concept/: concepts_coco.yaml  concepts_inspection.yaml  concepts_nematode.yaml  nematode_morphology_mapping.yaml
configs/data/: Objects365_local.yaml  coco-seg.yaml  coco.yaml  insepction_yolo_seg.yaml  lvis_local.yaml  nematode.yaml  ovd_coco_grounding_lvis_local.yaml  ovd_world.yaml  ovd_world_lvis_template.yaml  severstal_yolo_seg.yaml
configs/det_model/: deformable_caps.yaml  yolo26_capshead.yaml  yolo26_capsneckhead_v2.yaml  yolo26_capsneckhead_v6.yaml  yolo26_capsneckhead_v6_gated.yaml  yolo26_capsneckhead_v7.yaml  yolo26_capsneckhead_v8.yaml  yolo26_capsneckhead_v8_a11.yaml  yolo26_capsneckhead_v8_v4_allroute.yaml
configs/model/: yolo26.yaml  yolo26_capsneck.yaml  yolo26_capsneckhead.yaml  yolo26_capsneckhead_v3.yaml  yolo26_capsneckhead_v4.yaml  yolo26_capsneckhead_v5.yaml
configs/ovd_model/: yolo26_caps_ovd_v1.yaml  yolo26_caps_ovd_v2.yaml
configs/seg_model/: Capsneck_v6_seg.yaml  Capsneck_v6_seg_v2.yaml  Capsneck_v6_seg_v3.yaml  Capsneck_v6_seg_v3_a11.yaml  Capsneck_v6_seg_v3_a12.yaml  Capsneck_v6_seg_v4_allroute.yaml
engine/: __init__.py  evaluator.py  exporter.py  trainer.py
models/: __init__.py  capsule_ovd.py  capsule_ovd_v2.py  custom_yolo.py  layers.py
modules/: __init__.py  backbone.py  head.py  neck.py
tools/: benchmark_models.py  benchmark_models_template.csv  benchmarking.py  convert_insepction_to_yolo_seg.py  convert_mvtec_to_yolo_seg.py  convert_objects365_fast.py  convert_severstal_to_yolo_seg.py  ovd_benchmark_summary.csv  plot_speed_map.csv  plot_speed_map.py  plot_speed_map_26.csv  plot_speed_map_template.csv  plot_speed_map_template_full.csv  profile_modules.py  run_ovd_coco_grounding_lvis_tmp.py
tools/audit_caps/: README.md  __init__.py  ontology.py
tools/visual/: visualize_nematode_grid.py
utils/: visualize_concept_ontology.py  visualize_target_concepts.py
(+46 files in other folders)
