[project]
name = "csnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.4.9",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118"},
]
torchvision = [
  { index = "pytorch-cu118"},
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
