[project]
name = "csnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiftyone>=1.11.1",
    "torch>=2.7.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.4.9",
]

[project.optional-dependencies]
cu118 = [
    "torch",
    "torchvision",
]
cu128 = [
    "torch",
    "torchvision",
]

[tool.uv]
conflicts = [
  [
    { extra = "cu118" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", extra = "cu118"},
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu118", extra = "cu118"},
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
